tests/snapshots/filter_tests__snapshot_exclude_filter_active.snap
---
source: tests/filter_tests.rs
expression: output
---
web [Stopped]         worker [Stopped]                                                                                  
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
(1 filters)                                                                                                             
[12:00:00] web: Starting web server on port 3000                                                                        
[12:00:00] web: GET /api/users 200 OK                                                                                   
[12:00:00] worker: Processing job #1234                                                                                 
[12:00:00] worker: Job #1234 completed successfully                                                                     
[12:00:00] web: POST /api/auth 201 Created                                                                              
[12:00:00] web: Server ready to accept connections                                                                      
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Buffer: 0.0/50 MB (0%) | 8 lines   | 1 batches [TAIL]                                                                   
Press : for commands, / to search, q to quit
