tests/snapshots/filter_tests__snapshot_filter_list_display.snap
---
source: tests/filter_tests.rs
expression: output
---
web ● │ worker ●                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
(3 filters)                                                                                                             
[12:00:00] web: Starting web server on port 3000                                                                        
[12:00:00] web: ERROR: Database connection failed                                                                       
[12:00:00] worker: ERROR: Failed to process job #5678                                                                   
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Buffer: 0.0/50 MB (0%) | 8 lines   | 1 batches [TAIL]                                                                   
:fl_
